tests/mutability_failure/error.txt
Validation error: ./tests/mutability_failure/mutability_failure.fae, line 3: Cannot assign to immutable binding `a`
  3|     a = 6
         ^^^^^
